Fix nav css on ie

--- a/source/stylesheets/_nav.scss
+++ b/source/stylesheets/_nav.scss
@@ -118,7 +118,7 @@
         &__list {
             display: inline-block;
             height: auto;
-            max-height: initial;
+            max-height: none;
             float: right;
             margin: 0;
             padding: 1em;
